# ml-poc-project

./: LOG.md  PROJECT_APPROACH.md  pyproject.toml  requirements-dev.txt  setup.cfg
data/: combined_dataframe_DJI.csv  combined_dataframe_IXIC.csv  combined_dataframe_NYSE.csv  processed_test.csv  processed_validation.csv
models/: hist_gradient_boosting.joblib  log_reg.joblib
results/: equity_curves.csv  model_metrics.csv  strategy_metrics.csv  strategy_returns.csv  training_classification_report.csv
scripts/: generate_plots.py  main.py  prepare_data.py  run_backtest.py  train_models.py
src/: app.py  backtest.py  config.py  data.py  metrics.py  model_io.py  modeling.py  results.py
tests/: test_backtest.py  test_data_pipeline.py  test_metrics.py
